--- a/content_for_iso/app-misc/config/includes.chroot/etc/skel/Desktop/xterm.desktop
+++ b/content_for_iso/app-misc/config/includes.chroot/etc/skel/Desktop/xterm.desktop
@@ -6,7 +6,7 @@ Type=Application
 Name=root xterm
 Comment=
 Categories=Application;
-Exec=sudo -i xterm -class UXTerm -title uxterm -u8
+Exec=sudo su -
 Icon=xfce-terminal
-Terminal=false
+Terminal=true
 StartupNotify=false
